# stac-infrastructure

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  research-cloud-component.yml
data/: collections.json
scripts/: ingest-test-data.py  wait-for-it.sh
src/stac_infrastructure/: main.py
testconfig/: nginx.conf
testdata/: collection.json  items.ndjson
